# voice-agent

./: .gitignore  DESIGN.md  README.md
backend/: .env.example  .gitignore  Procfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/agent/: basic_agent.py  langchain_agent.py
backend/api/: server.py  upload.py
backend/data/: .gitkeep
backend/rag/: document_classifier.py  pdf_processor.py  retriever.py  storage_monitor.py
backend/scripts/: load_pdf.py
backend/tools/: __init__.py  airport_codes.py  flights.py  places.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CallControls.tsx  ConnectionStatus.tsx  FullTranscript.tsx  HeroSection.tsx  PDFUpload.tsx  ToolResults.tsx  Transcript.tsx  VoiceAgentView.tsx
frontend/src/lib/: livekit.ts
frontend/src/types/: transcript.ts
